add icon for translate and its item on menu_gallery.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
 
     <string name="title_activity_full_image">Scanned Image Viewer</string>
     <string name="images_scanned">Images Scanned</string>
+    <string name="action_translate">Translate</string>
     <string name="action_share">Share</string>
     <string name="action_delete">Delete</string>
     <string name="confirm_title">Confirm</string>
