--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="action_tag">Tag</string>
     <string name="storage_folder">Storage Folder</string>
     <string name="storage_folder_summary">Sets where the scanned files should be stored</string>
+    <string name="title_activity_ocr">OCRActivity</string>
 </resources>
